webserver/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-apps02
  labels:
    istio-injection: enabled
