webserver/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jkapp
  name: app1-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jkapp
  template:
    metadata:
      labels:
        app: jkapp
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        volumeMounts:
        - name: app-content-vol
          mountPath: /usr/share/nginx/html
      volumes:
      - name: app-content-vol
        configMap:
          name: app1-index
