webserver/jkapp-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jkapp
  name: jkapp
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: jkapp
