webserver/webserver-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webserver
  name: webserver-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: webserver
