webserver/jkapp-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jkapp-virtual-service
spec:
  hosts:
  - jkapp
  gateways:
  - jkapp-gateway
  http:
  - route:
    - destination:
        host: jkapp
        subset: v1
      weight: 1
    - destination:
        host: jkapp
        subset: v2
      weight: 99
