webserver/webserver-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webserver-virtual-service
spec:
  hosts:
  - webserver-svc
  gateways:
  - webserver--gateway
  http:
  - route:
    - destination:
        host: webserver
        subset: v1
      weight: 1
    - destination:
        host: webserver
        subset: v2
      weight: 99
